test/TestPhases/typechecker/valid/CobeginInstant.blc
module

activity doingStuff () returns int64
    var x: int32
    var y: int32
    await true
    cobegin
        y = x + 5
    with
        x = x + 1
    end
    return x + y
end

activity main ()()
    var x: int64
    run x = doingStuff()
    await false
end
