test/TestPhases/typechecker/invalid/SideEffect3.blc
module

function sideffect()(x: int32) returns bool
    x = x + 1
    return true
end

activity main ()()
    var x: int32 = 0
    repeat 
        x = x * 2
        await true
    until sideffect()(x) end
    await false
end
